@@ -1,3 +1,8 @@
+2005-09-24  Richard Henderson  <rth@redhat.com>
+
+	* ipa-type-escape.c (discover_unique_type): Remove dead code at
+	end of function.  Reindent.
+
 2005-09-24  Ian Lance Taylor  <ian@airs.com>
 
 	* convert.c (convert_to_integer): Don't test for ENUMERAL_TYPE in
